--- a/raon-control/members.html
+++ b/raon-control/members.html
@@ -13,14 +13,19 @@
 
   <div style="height:100px"></div>
 
+  <div id="title">Accelerator Control Team</div>
+
   <div id="body" style="margin:auto; position:relative; width:1920px; height:750px; display: flex;">
+    <div style="height:100px; background-color: blanchedalmond;"></div>
 
     <div class="card">
-      <img src="images/profile-image.svg">
+      <img class="avatar" src="images/profile-image.svg">
       <div class="name">Son, Changwook</div>
-      <p class="title">Senior Enginner</p>
-      <p class="email">scwook@ibs.re.kr</p>
-      <button>Contact</button>
+      <div class="charge">System Design</div>
+      <div class="task">Timing System, Control Network</div>
+      <div class="email">scwook@ibs.re.kr</div>
+      <div class="phone">042-878-8831</div>
+      <div class="location">Control Lab.1</div>
     </div>
 
   </div>
